--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script type="text/javascript" src="includes/bootstrap.js"></script>
   <script type="text/javascript" src="includes/bootstrap-modal.js"></script>
+  <script type="text/javascript" src="includes/bootstrap-modal.js"></script>
+  <script type="text/javascript" src="carbon-budget.js"></script>
     
   <link rel="stylesheet" href="includes/bootstrap.css">
   <link rel="stylesheet" href="includes/style.css">
