--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <script type="text/javascript" src="includes/bootstrap.js"></script>
   <script type="text/javascript" src="includes/bootstrap-modal.js"></script>
   <script type="text/javascript" src="carbon-budget.js"></script>
+  <script type="text/javascript" src="includes/highcharts.js"></script>
+  <script type="text/javascript" src="includes/hcb-charting.js"></script>
     
   <link rel="stylesheet" href="includes/bootstrap.css">
   <link rel="stylesheet" href="includes/style.css">
@@ -31,7 +33,7 @@
 
       <div class="row">
         <div class="span12">
-          <div class="dummy-chart">Dummy Chart :-)</div>
+          <div id="chart" class="dummy-chart">Dummy Chart :-)</div>
         </div>
       </div>
 
