--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <script type="text/javascript" src="includes/bootstrap.js"></script>
   <script type="text/javascript" src="includes/bootstrap-modal.js"></script>
   <script type="text/javascript" src="includes/highcharts.js"></script>
+  <script type="text/javascript" src="includes/spin.min.js"></script>
   <script type="text/javascript" src="carbon-budget.js"></script>
 
   <link rel="stylesheet" href="includes/bootstrap.css">
@@ -28,40 +29,7 @@
       </div>
     </div>
 
-    <div class="container">
-
-      <div class="row">
-        <div class="span12">
-          <div id="chart" class="dummy-chart">Dummy Chart :-)</div>
-        </div>
-      </div>
-
-      <!-- Example row of columns -->
-      <div class="row">
-        <div class="span4">
-          <h2>Heading</h2>
-           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
-        </div>
-        <div class="span4">
-          <h2>Heading</h2>
-           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
-       </div>
-        <div class="span4">
-          <h2>Heading</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
-        </div>
-      </div>
-
-      <hr>
-
-      <footer>
-        <p>&copy; Created by ...</p>
-      </footer>
-
-    </div> <!-- /container -->
+    <div id="chart"></div>
 
 </body>
 </html>
